Agent/deploy/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ea
  namespace: rtx
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ea
  type: NodePort
